styling scrollbar bug fix

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -149,7 +149,7 @@
 @media screen and (max-width: 768px) {
   .library {
     width: 100%;
-    height: 103%;
+    height: 100%;
   }
 
   .library-song {
